--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,77 @@
 body {
+    max-width: 900px;
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
+    align-content: center;
+}
+
+#body {
     background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/45degreee_fabric.png");
     background-repeat: repeat;
 }
 
 header {
-    Margin: 20px 20px
-    font-size: 24px
-    background-color: solid black
+    margin: 20px;
+    font-size: 24px;
+    max-width: 700px;
 }
+
+main {
+    float: left;
+    max-width: 700px;
+}
+
+.connect::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
 #linkbar {
-    background-color: rgb(47, 45, 45);
+    float: right;
+    background-color: grey;
+    margin: 0;
+}  
+
+img {
+    float: left;
+}
+
+#git {
+    background-color: #171515;
+}
+
+#linked {
+    background-color: #0072b1;
+}
+
+#stack {
+    background-color: #f47f24;
+}
+a.link {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 60px;
+    color: cornflowerblue;
+    padding: 15px 30px;
+    align-content: center;
+}
+
+main {
     font-size: 20px;
+    background-color: whitesmoke;
+    padding: 10px;
+    max-width: 700px;
+}
+
+#linkbar {
+    background-color: rgb(114, 114, 177);
+    font-size: 22px;
+    max-width: 700px;
 }
 
 .fa {
@@ -22,20 +81,17 @@ header {
     text-align: center;
     text-decoration: none;
     border-radius: 50%;
-    
-  }
-#linked {
-    background-color: #0072b1;
 }
-#stack {
-    background-color: #F47F24;
-}
-#git {
-    background-color: #171515;
-}
-a:link {
+
+.connect > a {
     color: white;
-    background-color: transparent;
-    text-decoration: none;
-  }
-  
+}
+
+footer {
+    padding: 20px 0px 20px;
+}
+
+.connect {
+    background-color: whitesmoke;
+    padding: 10px;
+}
